# Showcase

./: .env.backup  .env.example  .gitignore  README.md  alembic.ini  all_code.txt  check_models.py  debug_import.py  debug_settings.py  final_test_log.txt  final_test_log_2.txt  gemini_basic_result.txt  gemini_basic_result_2.txt  gemini_test_full.txt  gemini_test_full2.txt  latest_log.txt  pyproject.toml  routes_log.txt  run_test_script.py  share_code.py  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_5.txt  test_output_6.txt  test_output_7.txt  test_output_8.txt
agents/: agno_app.py  integration.py
agents/core/: gemini_agent.py  schema_builder.py  template_selector_agent.py
agents/execution/: build_engine.py  deploy_handler.py  upload_handler.py
agents/generation/: generation_agent.py
agents/middleware/: data_preprocessor.py
alembic/: env.py
app/: Backend_readme.md  chat.py  main.py  orchestrator.py  schema_builder.py  tasks.py
app/api/: routes.py
frontend/: package-lock.json  package.json
templates/: registry.json
tests/: check_background_tasks.py  check_database.py  check_job.py  check_models.py  conftest.py  debug_config.py  debug_endpoints.py  debug_env.py  debug_log.txt  run_test_script.py  test_api_upload.py  test_data_agent.py  test_endpoints.py  test_gemini_agent.py  test_gemini_basic.py  test_gemini_connection.py  test_genai_api.py  test_git_push_agent.py  test_ocr_manual.py  test_ocr_service.py  test_prompt_agent.py  test_pymupdf_extraction.py  test_schema_builder_agent.py  test_template_selector_agent.py
(+41 files in other folders)
